--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,4 +1,5 @@
 .about{
+    overflow: hidden;
 
     &__container{
         @extend .container;
